<resources>
    <string name="app_name">叮叮蚊</string>
    <string name="double_click_exit">双击退出程序</string>
    <string name="net_unusable">网络不可用</string>
    <string name="init_app">正在初始化......</string>
    <string name="loading">正在加载......</string>
    <string name="uploading">正在上传......</string>
    <string name="requesting">正在请求......</string>
    <string name="request_success">请求成功</string>
    <string name="upload_success">上传成功</string>
    <string name="deleting">正在删除......</string>
    <string name="delete_success">删除成功</string>
    <string name="logout">退出登录......</string>
    <string name="input_phone_num">输入手机号</string>
    <string name="get_verify_code">获取验证码</string>
    <string name="input_verify_code">输入验证码</string>
    <string name="input_pwd">输入密码</string>
    <string name="input_confirm_pwd">确认密码</string>
    <string name="min_pwd_length">密码长度最少8位</string>
    <string name="number_pwd">密码不能全部数字</string>
    <string name="forget_pwd">忘记密码</string>
    <string name="new_user">注册新用户</string>
    <string name="register_agreement_check">我已阅读并同意</string>
    <string name="register_agreement_name">《叮叮蚊协议》</string>
    <string name="login_on_other_platform">第三方登录</string>
    <string name="login">登录</string>
    <string name="register">注册</string>
    <string name="confirm">确认</string>
    <string name="next_step">下一步</string>
    <string name="user_exist">该手机号码已被注册</string>
    <string name="user_not_exist">该手机号码未注册</string>
    <string name="phone_num_error">请输入正确的手机号码</string>
    <string name="confirm_pwd_different">两次密码输入不一致</string>
    <string name="select_gender">选择性别</string>
    <string name="gender_male">男</string>
    <string name="gender_female">女</string>
    <string name="input_age">输入年龄</string>
    <string name="input_nickname">输入昵称</string>
    <string name="login_error">用户登录异常</string>
    <string name="loginning">正在登录......</string>
    <string name="setting">正在设置......</string>
    <string name="set_success">设置成功</string>
    <string name="validating">正在校验......</string>
    <string name="registering">正在注册......</string>
    <string name="register_success">注册成功</string>
    <string name="bind_phone">绑定手机</string>
    <string name="recommend">推荐</string>
    <string name="find_money">找钱</string>
    <string name="money_friendship">钱圈</string>
    <string name="route_plane_type">规划方式</string>
    <string name="route_plane_duration">规划时间</string>
    <string name="route_plane_distance">规划距离</string>
    <string name="find_money_scan_coin">扫币</string>
    <string name="find_money_pay_coin">付款</string>
    <string name="search">搜索</string>
    <string name="personal_find">我的搜搜</string>
    <string name="my_friend">我的好友</string>
    <string name="my_galley">我的相册</string>
    <string name="qr_scan_log">扫币明细</string>
    <string name="coin_log">金币日志</string>
    <string name="register_business">升级商户</string>
    <string name="focus_shop">关注店铺</string>
    <string name="settings">设置</string>
    <string name="take_photo">拍照</string>
    <string name="galley_select">相册选取</string>
    <string name="buy_coin">购买金币</string>
    <string name="publishing_tasks">发布任务</string>
    <string name="publishing_tasks_log">发布任务日志</string>
    <string name="publishing_focuser">店铺关注者</string>
    <string name="scanned_log">被扫日志</string>
    <string name="withdraw">个人提现</string>
    <string name="withdraw_log">提现明细</string>
    <string name="personal_payment_log">付款明细</string>
    <string name="personal_coupon_log">兑换明细</string>
    <string name="personal_coin_counts">获取金币数</string>
    <string name="personal_coin_time">获取时间</string>
    <string name="buy_coin_hint">请输入购买币数</string>
    <string name="buy_coin_counts">购买币数</string>
    <string name="buy_coin_time">交易时间</string>
    <string name="buy_coin_left_counts">剩余币数</string>
    <string name="buy_coin_success">提交购买金币订单成功</string>
    <string name="buy_coin_coin_count_required">请输入购买金币数</string>
    <string name="buy_coin_pay_type">请选择支付方式</string>
    <string name="buy_coin_pay_wechat">微信支付</string>
    <string name="buy_coin_pay_union">银行卡支付</string>
    <string name="buy_coin_pay_ali">支付宝支付</string>
    <string name="publish_task_left_coins">剩余金币数</string>
    <string name="publish_task_package_title">悬赏金币</string>
    <string name="publish_task_time_title">悬赏时间</string>
    <string name="publish_task_coin_total_counts">发布总币数</string>
    <string name="publish_task_begin_end_time">起止时间</string>
    <string name="publish_task_coin_left_counts">剩余币数</string>
    <string name="publish_task_success">发布任务成功</string>
    <string name="publish_task_total_coin_required">请输入发布总金币数</string>
    <string name="publish_task_min_coin_required">请输入最小扫描金币数</string>
    <string name="publish_task_max_coin_required">请输入最大扫描金币数</string>
    <string name="publish_task_begin_time_required">请输入任务开始时间</string>
    <string name="publish_task_end_time_required">请输入任务结束时间</string>
    <string name="publish_task_package_count_hint">填写个数</string>
    <string name="publish_task_package_amount_hint">填写金额</string>
    <string name="publish_task_time_hint">请选择时间</string>
    <string name="publishing">正在发布......</string>
    <string name="publish_success">发布成功</string>
    <string name="publish_log_task_left_coin">任务剩余总金币数:</string>
    <string name="register_business_baza_name">商铺名称:</string>
    <string name="register_business_baza_pers">联系姓名:</string>
    <string name="register_business_baza_tel">联系电话:</string>
    <string name="register_business_baza_address">地址:</string>
    <string name="register_business_remark">备注:</string>
    <string name="register_business_coor">坐标:</string>
    <string name="refresh_coor">定位</string>
    <string name="register_business_submit">确认提交</string>
    <string name="register_business_name_hint">填写商铺名称</string>
    <string name="register_business_pers_hint">填写联系人姓名</string>
    <string name="register_business_tel_hint">填写联系电话</string>
    <string name="register_business_address_hint">填写商铺地址</string>
    <string name="register_business_remark_hint">填写商铺备注</string>
    <string name="register_business_coor_hint">填写商铺坐标</string>
    <string name="register_business_name_required">请输入商铺名称</string>
    <string name="register_business_pers_required">请输入商铺联系人</string>
    <string name="register_business_tel_required">请输入商铺电话</string>
    <string name="register_business_address_required">请输入商铺地址</string>
    <string name="register_business_remark_required">请输入商铺备注</string>
    <string name="register_business_coor_required">请输入商铺坐标</string>
    <string name="register_business_success">您已成功升级为商户</string>
    <string name="registering_business">正在升级......</string>
    <string name="qr_scan_title">扫码</string>
    <string name="qr_scan_get_coin">扫币</string>
    <string name="qr_scan_pay">付款</string>
    <string name="get_coins_error">获取金币失败,请重新扫码获取</string>
    <string name="payment_title">付款</string>
    <string name="payment_all_amount_title">消费总额(人名币)</string>
    <string name="payment_left_coin_counts_title">金币数量</string>
    <string name="payment_use_coin_pay_title">使用金币支付</string>
    <string name="payment_actual_pay_title">实付金额</string>
    <string name="payment_pay_amount_hint">请询问服务员后输入</string>
    <string name="payment_coin_counts_hint">请输入金币个数</string>
    <string name="payment_submit_payment_success">提交付款订单成功</string>
    <string name="exchange_title">兑换</string>
    <string name="exchange_all_coin_title">总金币数</string>
    <string name="detail_user_name">用户名 : </string>
    <string name="detail_change_money_times">找钱次数</string>
    <string name="detail_coin_counts">币总数量</string>
    <string name="detail_get_from_friend_counts">收友数量</string>
    <string name="detail_personal_album">个人相册</string>
    <string name="detail_more_info">查看更多</string>
    <string name="detail_add_friend">添加好友</string>
    <string name="detail_delete_friend">解除好友</string>
    <string name="detail_remark_friend">添加备注</string>
    <string name="detail_send_msg">发送消息</string>
    <string name="detail_send_video">视频聊天</string>
    <string name="setting_person_name">姓名:</string>
    <string name="setting_person_gender">性别:</string>
    <string name="setting_person_phone">手机号:</string>
    <string name="setting_person_age">年龄:</string>
    <string name="setting_person_area">省市区:</string>
    <string name="setting_person_address">住址:</string>
    <string name="setting_logout">退出登录</string>
    <string name="edit_personal_person_avater">头像</string>
    <string name="edit_personal_person_name">姓名</string>
    <string name="edit_personal_person_nickname">昵称</string>
    <string name="edit_personal_person_gender">性别</string>
    <string name="edit_personal_person_phone">手机号</string>
    <string name="edit_personal_person_birth">生日</string>
    <string name="edit_personal_person_age">年龄</string>
    <string name="edit_personal_person_area">省市区</string>
    <string name="edit_personal_person_address">住址</string>
    <string name="future_search_new_friend">搜索新朋友</string>
    <string name="shop_detail">详情</string>
    <string name="shop_focus_person_counts">关注人数</string>
    <string name="shop_daily_coins">今日币数</string>
    <string name="shop_left_total_coins">剩余总币数</string>
    <string name="shop_visit_person_counts">访问人数</string>
    <string name="shop_more_followers">查看更多</string>
    <string name="focused_shop_name">店铺:</string>
    <string name="focused_shop_pers">联系人:</string>
    <string name="focused_shop_tel">电话:</string>
    <string name="focused_shop_daily_coins">金币数</string>
    <string name="focused_shop_address">地址:</string>
    <string name="shop_focuser_total_person">总关注人</string>
    <string name="shop_focuser_person">人</string>
    <string name="input_withdraw_gold_num">输入您所需提现的金币数额</string>
    <string name="withdrawing">正在提现......</string>
    <string name="withdraw_log_coin_counts">兑换金币数</string>
    <string name="withdraw_log_rmb_amount">提现金额</string>
    <string name="withdraw_log_time">时间间隔</string>
    <string name="baza_name">商铺名称:</string>
    <string name="baza_pers">联系人:</string>
    <string name="baza_tel">联系电话:</string>
    <string name="baza_address">商铺地址:</string>
    <string name="baza_remark">备注:</string>
    <string name="bind_bank_card_validating">正在校验......</string>
    <string name="bind_bank_card_fail">此账号不存在,重新输入</string>
    <string name="bind_bank_binding">正在绑定......</string>
    <string name="logout_warning">您的账号在其他设备登录,请重新登陆</string>
    <string name="user_sig_warning">您的账号票据过期,请重新登陆</string>
    <string name="summary_image">[图片]</string>
    <string name="summary_voice">[语音]</string>
    <string name="summary_video">[小视频]</string>
    <string name="summary_file">[文件]</string>
    <string name="summary_friend_add">请求添加好友</string>
    <string name="summary_friend_added">我已添加</string>
    <string name="summary_friend_add_me">请求添加</string>
    <string name="summary_friend_recommend">推荐添加</string>
    <string name="summary_me">我</string>
    <string name="summary_group_apply">申请加群</string>
    <string name="summary_group_invite">邀请</string>
    <string name="summary_group_add">加入群</string>
    <string name="save_exist">文件已存在</string>
    <string name="save_success">保存成功</string>
    <string name="download_fail">下载失败</string>
    <string name="downloading">正在下载，请稍候</string>
    <string name="save_fail">保存失败</string>
    <string name="profile_chat">发送消息</string>
    <string name="chat_setting_add">申请加群</string>
    <string name="chat_setting_group_member">群成员</string>
    <string name="chat_setting_group_id">群组ID</string>
    <string name="chat_setting_group_name">群名称</string>
    <string name="chat_setting_group_add_opt">加群方式</string>
    <string name="chat_setting_group_msg_alert">消息提醒</string>
    <string name="chat_setting_group_introduce">群介绍</string>
    <string name="profile_id">账号</string>
    <string name="profile_remark">备注名</string>
    <string name="profile_black">加入黑名单</string>
    <string name="profile_del">删除好友</string>
    <string name="profile_now_group">所在分组</string>
</resources>