<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_yellow"
    android:fitsSystemWindows="true">

    <include
        layout="@layout/common_toolbar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/common_toolbar_height" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="@dimen/common_toolbar_height"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:orientation="horizontal"
            android:padding="@dimen/activity_horizontal_padding">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/publish_log_task_left_coin"
                android:textColor="@color/grey"
                android:textSize="@dimen/font_medium" />

            <TextView
                android:id="@+id/tasks_left_coins"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:maxLines="1"
                android:text=""
                android:textColor="@color/orange"
                android:textSize="@dimen/font_medium" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:background="@drawable/white_panel_top_bottom_border"
            android:orientation="horizontal"
            android:paddingBottom="@dimen/activity_vertical_padding"
            android:paddingTop="@dimen/activity_vertical_padding">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/publish_task_coin_total_counts"
                android:textColor="@color/grey"
                android:textSize="@dimen/font_medium" />


            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/publish_task_begin_end_time"
                android:textColor="@color/grey"
                android:textSize="@dimen/font_medium" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/publish_task_coin_left_counts"
                android:textColor="@color/grey"
                android:textSize="@dimen/font_medium" />
        </LinearLayout>

        <com.marshalchen.ultimaterecyclerview.UltimateRecyclerView
            android:id="@+id/publish_list"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/light_yellow" />
    </LinearLayout>

</android.support.design.widget.CoordinatorLayout>