<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingBottom="@dimen/common_user_info_item_margin_top"
    android:paddingTop="@dimen/common_user_info_item_margin_top">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@mipmap/cat_logo" />

    <RelativeLayout
        android:id="@+id/user_name_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/common_user_info_layout_margin_top"
        android:background="@drawable/common_user_info_item_bg"
        android:paddingBottom="@dimen/common_user_info_item_padding"
        android:paddingTop="@dimen/common_user_info_item_padding">

        <ImageView
            android:id="@+id/user_name_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:src="@mipmap/user_icon" />

        <EditText
            android:id="@+id/user_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_toRightOf="@id/user_name_icon"
            android:background="@null"
            android:hint="@string/input_phone_num"
            android:imeOptions="actionNext"
            android:inputType="phone"
            android:singleLine="true"
            android:textColor="@color/grey"
            android:textColorHint="@color/grey"
            android:textSize="@dimen/font_medium" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/user_count_down_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/common_user_info_item_margin_top"
        android:background="@drawable/common_user_info_item_bg"
        android:paddingBottom="@dimen/common_user_info_item_padding"
        android:paddingTop="@dimen/common_user_info_item_padding">

        <ImageView
            android:id="@+id/user_count_down_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:src="@mipmap/count_down_icon" />

        <TextView
            android:id="@+id/get_verify_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:background="@drawable/get_verify_code_button_bg"
            android:text="@string/get_verify_code"
            android:textColor="@color/grey"
            android:textSize="@dimen/font_medium" />

        <EditText
            android:id="@+id/user_verify_code"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            android:layout_toLeftOf="@id/get_verify_button"
            android:layout_toRightOf="@id/user_count_down_icon"
            android:background="@null"
            android:hint="@string/input_verify_code"
            android:imeOptions="actionNext"
            android:inputType="number"
            android:singleLine="true"
            android:textColor="@color/grey"
            android:textColorHint="@color/grey"
            android:textSize="@dimen/font_medium" />


    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/user_pwd_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/common_user_info_item_margin_top"
        android:background="@drawable/common_user_info_item_bg"
        android:paddingBottom="@dimen/common_user_info_item_padding"
        android:paddingTop="@dimen/common_user_info_item_padding">

        <ImageView
            android:id="@+id/user_pwd_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:src="@mipmap/lock_icon" />

        <EditText
            android:id="@+id/user_pwd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_toRightOf="@id/user_pwd_icon"
            android:background="@null"
            android:hint="@string/input_pwd"
            android:imeOptions="actionNext"
            android:inputType="textPassword"
            android:singleLine="true"
            android:textColor="@color/grey"
            android:textColorHint="@color/grey"
            android:textSize="@dimen/font_medium" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/user_confirm_pwd_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/common_user_info_item_margin_top"
        android:background="@drawable/common_user_info_item_bg"
        android:paddingBottom="@dimen/common_user_info_item_padding"
        android:paddingTop="@dimen/common_user_info_item_padding">

        <ImageView
            android:id="@+id/user_confirm_pwd_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:src="@mipmap/lock_icon" />

        <EditText
            android:id="@+id/user_confirm_pwd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_toRightOf="@id/user_confirm_pwd_icon"
            android:background="@null"
            android:hint="@string/input_confirm_pwd"
            android:imeOptions="actionDone"
            android:inputType="textPassword"
            android:singleLine="true"
            android:textColor="@color/grey"
            android:textColorHint="@color/grey"
            android:textSize="@dimen/font_medium" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/common_user_info_item_margin_top"
        android:paddingBottom="@dimen/common_user_info_item_padding"
        android:paddingTop="@dimen/common_user_info_item_padding">

        <TextView
            android:id="@+id/forget_pwd_link"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:paddingBottom="@dimen/common_text_view_padding"
            android:paddingRight="@dimen/common_text_view_padding"
            android:paddingTop="@dimen/common_text_view_padding"
            android:src="@mipmap/lock_icon"
            android:text="@string/forget_pwd"
            android:textColor="@color/grey"
            android:textSize="@dimen/font_medium" />

        <Button
            android:id="@+id/login_register_confirm_button"
            style="@style/orange_button"
            android:layout_centerInParent="true"
            android:text="@string/login" />

        <TextView
            android:id="@+id/new_user_link"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:paddingBottom="@dimen/common_text_view_padding"
            android:paddingRight="@dimen/common_text_view_padding"
            android:paddingTop="@dimen/common_text_view_padding"
            android:text="@string/new_user"
            android:textColor="@color/grey"
            android:textSize="@dimen/font_medium" />
    </RelativeLayout>
</LinearLayout>